# open-agents

./: .gitignore  LICENSE  README.md
agent-card-spec/: SPEC.md
agent-starter/: .env.example  README.md  agent-card.yaml  package.json
agent-starter/examples/: echo-agent.js  research-agent.js
agent-starter/src/: config.js  index.js  memory.js  register.js  reporter.js  worker.js
agent-starter/tests/: register.test.js
docs/guides/: langchain.md
examples/: sample-cards.yaml
examples/seed-agents/code-review-agent/: README.md  agent-card.yaml  package.json
examples/seed-agents/code-review-agent/src/: handler.js
examples/seed-agents/research-agent/: README.md  agent-card.yaml  package.json  register.sh
examples/seed-agents/research-agent/src/: config.js  handler.js  memory.js  register.js  reporter.js  worker.js
examples/seed-agents/summarize-agent/: README.md  agent-card.yaml  package.json
examples/seed-agents/summarize-agent/src/: handler.js  index.js
integrations/langchain-community/: PR-DESCRIPTION.md  README.md  clawprint-tools.patch
sdks/node/: README.md  index.js  package.json
sdks/node/examples/: acp-workflow.js  search.js  trust-check.js
sdks/node/lib/: client.js
sdks/python/: LICENSE  README.md  pyproject.toml
sdks/python/clawprint/: __init__.py  client.py  exceptions.py  http.py  types.py
sdks/python/examples/: acp_workflow.py  search.py  trust_check.py
skill/: SKILL.md
tools/github-action/: README.md  action.yml  index.js  package.json
tools/register-cli/: README.md  package.json
(+4 files in other folders)
