[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clawprint"
version = "0.1.0"
description = "Python SDK for the ClawPrint agent registry API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "ClawPrint", email = "sdk@clawprint.io" }]
keywords = ["clawprint", "agents", "registry", "acp", "trust", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = ["requests>=2.20.0"]

[project.urls]
Homepage = "https://clawprint.io"
Documentation = "https://clawprint.io/docs"
Repository = "https://github.com/clawprint/clawprint-python"

[tool.hatch.build.targets.wheel]
packages = ["clawprint"]
